# hyper_jade

./: .gitignore  LANGSMITH_TRACING.md  README.md  README_MLFLOW.md  README_SUPERVISED_INDIVIDUAL_EVALUATOR.md  README_UV.md  activate_and_run.sh  check_numbers.py  docker-compose.yml  list_outputs.py  main.py  pyproject.toml  requirements.txt  run_agent_evaluation.py  run_code_corrector.py  run_full_pipeline.sh  run_group_functions.py  run_prompt_evaluator.py  run_prompt_generator.py  run_prompt_generator_with_rag.py  run_rag_prompt_generator.py  run_requirement_generator.py  run_supervised_evaluator.py  run_supervised_evaluator.sh  run_supervised_individual_evaluator.py  run_supervised_individual_evaluator.sh  run_worker.py  setup_rag.py  start_worker.py  template.env  test_agents.py  test_individual_evaluator.py  test_rag_full_flow.py  view_mlflow_metrics.py
data/: clases_summary.txt  summarize_notebooks.py
docs/: AGENT_USAGE.md  README.md
ejemplos/: alu1.py  alu10.txt  alu3.py  alu5.py  alu6.txt  alu7.py  alu8.txt  alu9.txt  consigna.txt
plots/: examples_quantity_experiment.sh  model_comparison_experiment.sh  plot_experiments.py  plot_experiments2.py  plot_requirements_quality.py  plot_separate_metrics.py  rag_and_theory_comparison.sh  rag_comparison.sh
prompt_generators/: config.yaml  prompt_builder_agent.py
runners/: eval_en2en.sh  eval_en2es.sh  eval_es2en.sh  eval_es2es.sh  eval_p2_ej1_theory_rag_co_theory.sh  eval_p2_ej1_theory_rag_ex_theory.sh  eval_p2_ej1_theory_rag_ex_theory_co_theory.sh  eval_p2_ej1_theory_rag_plain.sh  eval_p2_ej1_theory_rag_rag.sh  (+46 more)
(+418 files in other folders)
